# rhmail

./: .env.example  .gitignore  Dockerfile  Gmail-AI-Email-Analysis-Tech-Spec.md  PROJECT_CONTEXT.md  Procfile  README.md  gmail-ai-技术开发方案.md  gmail-ai-邮件分析系统-精简版.md  pyproject.toml  railway.toml  requirements.txt
app/: analyzer.py  auth.py  cleaner.py  config.py  db.py  digest.py  gmail.py  jobs.py  logging_config.py  main.py  middleware.py  models.py  oauth.py  prefilter.py  scheduler.py
scripts/: authorize.py  entrypoint.sh
static/: style.css
templates/: accounts.html  base.html  dashboard.html  digest_detail.html  digests.html  email_detail.html  emails.html  login.html  macros.html  sidebar.html
tests/: conftest.py  test_analyzer.py  test_auth.py  test_cleaner.py  test_config.py  test_digest.py  test_main.py  test_middleware.py  test_models.py  test_prefilter.py
