[project]
name = "rhmail"
version = "1.0.0"
description = "Self-hosted AI-powered Gmail analysis system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TONGZHOU LIU", email = "liu.tongzhou@rhcloud.sg"}
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "jinja2==3.1.4",
    "itsdangerous==2.2.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.30",
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "google-auth==2.30.0",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.134.0",
    "psycopg[binary]==3.1.19",
    "psycopg2-binary==2.9.9",
    "apscheduler==3.10.4",
    "tzdata==2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
]
ignore = [
    "S101", # Use of assert (needed for tests)
    "B008", # Do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "app/data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
